--- a/resources/css/components/global.pcss
+++ b/resources/css/components/global.pcss
@@ -3,11 +3,17 @@
     -webkit-tap-highlight-color: transparent;
   }
   body {
-    font-family: Consolas, monaco, monospace, Helvetica, Arial;
-    font-size: 18px;
+    font-family: 'Crimson Pro', serif;
+    font-size: 20px;
+  }
+  h1 {
+    font-family: 'Roboto Slab', serif;
+    letter-spacing: 1px;
+    @apply font-bold;
+    @apply text-4xl;
   }
   p {
-    @apply my-2;
+    @apply my-4;
   }
   a {
     @apply border-b-2;
