--- a/resources/css/components/global.pcss
+++ b/resources/css/components/global.pcss
@@ -15,6 +15,10 @@
   p {
     @apply my-4;
   }
+  ul {
+    @apply list-disc;
+    @apply pl-10;
+  }
   a {
     @apply border-b-2;
     @apply border-gray-500;
