Change post styling
FossilOrigin-Name: 517caf29f090b4b3195e93a6c99743627dbffd01ceb8921b8bcbb5d89f05ddaf

--- a/resources/css/components/global.pcss
+++ b/resources/css/components/global.pcss
@@ -5,6 +5,7 @@
   body {
     font-family: 'Crimson Pro', serif;
     font-size: 20px;
+    @apply max-w-screen-md;
   }
   h1 {
     font-family: 'Roboto Slab', serif;
@@ -22,5 +23,9 @@
   a {
     @apply border-b-2;
     @apply border-gray-500;
+  }
+  code {
+    @apply text-sm;
+    @apply max-w-screen-md;
   }
 }
