--- a/resources/css/components/global.pcss
+++ b/resources/css/components/global.pcss
@@ -20,8 +20,8 @@
     @apply text-gray-700;
   }
   h1 {
-    font-family: 'cooper-black-std', serif;
-    font-weight: 400;
+    font-family: var(--font-primary);
+    font-weight: 600;
     font-style: normal;
     font-size: 3.5em;
     @apply leading-none;
