--- a/resources/css/components/global.pcss
+++ b/resources/css/components/global.pcss
@@ -15,7 +15,7 @@
     line-height: 1.4;
     font-family: var(--font-primary);
     font-size: var(--font-size-default);
-    @apply max-w-screen-xs;
+    @apply max-w-screen-sm;
     @apply text-gray-900;
   }
   h1 {
@@ -38,7 +38,8 @@
     color: -webkit-link;
   }
   pre {
-    background: #f7fafc;
+    background: #f9f9f9;
+    overflow: auto;
   }
   code {
     font-size: 0.7rem;
